--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,120 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Kamal Sharma
+    - #name: Date of Birth
+      #value: 14th March 1879
     - name: Languages
-      value: English, German
+      value: English, Hindi
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MS,PhD
+      institution: Georgia Institute of Techonology, Atlanta, GA
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Transport in low-dimensional interacting systems.
+        - Low-dimensional quantum physics, Many-body physics, Non-linear dynamics
+        # - Teaching assistant and PhD candidate
+        # - title: 
+          # contents:
+          #   - Courses taught = Classical Mechanics, Quantum Mechanics,  Electricity and Magnetism, Quantum Computing.
+            # - Sub-description 2.
+    - title: Bachelor of Technology
+      institution: Indian Institute of Technology, Roorkee, India
+      year: 2009
       description:
-        - Description 1.
-        - Description 2.
+        - Civil Engineering.
+        # - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoctoral Research Associate
+      institution: Dept. of Physics & Astronomy, Texas Tech University, Lubbock, TX
+      year: 2021-present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Measuring correlations in quantum simulations performed on superconducting circuits.
+        - Light and Matter 
+        - Coupling between a one-dimensional electron system and light in an optical cavity.
+          # contents:
+            # - Sub-description 1.
+            # - Sub-description 2.
+    # - title: Visiting Professor
+    #   institution: California Institute of Technology, Pasadena, California, US
+    #   year: 1933
+    #   description:
+    #     - Description 1.
+    #     - Description 2.
+    - title: Postdoc Researcher
+      institution: School of Physics, Georgia Institute of Technology, Atlanta, GA
+      year: 2020 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Computational biophysics
+        - Numerical parameter sensitivity analysis of electrical alternans on cardiac tissue.
+            # contents:
+            # - Sub-description 1.
+            # - Sub-description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Graduate Teaching Assistant
+      year: 2020 - 2021
       description:
+         - Courses taught = Classical Mechanics, Quantum Mechanics,  Electricity and Magnetism, Quantum Computing.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    # - title: Visiting Professor
+    #   institution: California Institute of Technology, Pasadena, California, US
+    #   year: 1933
+    #   description:
+    #     - Description 1.
+    #     - Description 2.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+
+    # - title: Director
+    #   institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+    #   year: 1917-1933
+
+    # - title: Professor of Theoretical Physics
+    #   institution: Karl-Ferdinand University, Prague, Czechoslovakia
+    #   year: 1911 - 1917
+    #   description:
+
+    # - title: Associate Professor of Theoretical Physics
+    #   institution: University of Zurich, Zurich, Switzerland
+    #   year: 1909 - 1911
+
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items: 
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+#     - year: 2029
+#       items: 
+#         - Max Planck Medal
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+    - title: Theoretical condensed matter physics - non-equilibrium systems, many-body physics.
+      # items: 
+      #   - Low-dimensional many-body physics.
+      #   - Description 2.
+    # - title: Topic 2.
+    #   items:
+    #     - Description 1.
+    #     - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Musics, Movies, etc.
